<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.impl.ManageCityActivity">
    <View
        android:id="@+id/module_left_activity_manage_city_placeholder"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/module_left_weather_color_primary"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/module_left_activity_manage_city_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/module_left_weather_color_primary"
        app:navigationIcon="@drawable/design_ic_back_white"
        app:layout_constraintTop_toBottomOf="@id/module_left_activity_manage_city_placeholder"
        app:title="@string/module_left_activity_manage_city_title"
        app:titleTextColor="@color/design_color_text_white" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/module_left_activity_manage_city_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/module_left_activity_manage_city_toolbar"
        app:layout_constraintBottom_toBottomOf="@id/module_left_activity_manage_city_add_button_bg_split"/>
    <ImageView
        android:id="@+id/module_left_activity_manage_city_nothing"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/module_left_ic_nothing"
        app:layout_constraintTop_toBottomOf="@id/module_left_activity_manage_city_toolbar"
        app:layout_constraintBottom_toTopOf="@id/module_left_activity_manage_city_add_button_bg_split"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@null" />
    <TextView
        android:id="@+id/module_left_activity_manage_city_nothing_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/module_left_activity_manage_city_nothing_desc"
        android:textColor="@color/design_color_text_black"
        android:textSize="@dimen/design_sub_title"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/module_left_activity_manage_city_nothing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/module_left_activity_manage_city_nothing_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="module_left_activity_manage_city_nothing_description,module_left_activity_manage_city_nothing"/>
    <View
        android:id="@+id/module_left_activity_manage_city_add_button_bg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/design_color_white"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <View
        android:id="@+id/module_left_activity_manage_city_add_button_bg_split"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_color_line"
        app:layout_constraintBottom_toTopOf="@id/module_left_activity_manage_city_add_button_bg"/>
    <TextView
        android:id="@+id/module_left_activity_manage_city_add_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/module_left_activity_manage_city_add_button_height"
        android:background="@drawable/module_left_activity_manage_city_add_bg"
        android:text="@string/module_left_activity_manage_city_button_add"
        android:textColor="@color/design_color_text_white"
        android:textSize="@dimen/design_main_title"
        android:layout_marginLeft="@dimen/design_margin_left"
        android:layout_marginRight="@dimen/design_margin_right"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/module_left_activity_manage_city_add_button_bg"
        app:layout_constraintBottom_toBottomOf="@id/module_left_activity_manage_city_add_button_bg"
        app:layout_constraintLeft_toLeftOf="@id/module_left_activity_manage_city_add_button_bg"
        app:layout_constraintRight_toRightOf="@id/module_left_activity_manage_city_add_button_bg"/>
</androidx.constraintlayout.widget.ConstraintLayout>